--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geo + IP</title>
+  <title>Datos de Red y Ubicación</title>
 </head>
 <body>
-<h2>Obteniendo datos...</h2>
-<pre id="output"></pre>
+  <h2>Obteniendo datos...</h2>
 
-<script>
-// Mostrar datos
-function log(msg) {
-    document.getElementById("output").textContent += msg + "\n";
-}
+  <p id="ipPublica"></p>
+  <p id="gps"></p>
+  <p id="mapa"></p>
 
-// Obtener IP Pública
-fetch("https://api.ipify.org?format=json")
-    .then(r => r.json())
-    .then(data => log("IP Pública: " + data.ip))
-    .catch(() => log("No se pudo obtener IP Pública"));
+  <script>
+    async function obtenerIPPublica() {
+      try {
+        let respuesta = await fetch("https://api.ipify.org?format=json");
+        let datos = await respuesta.json();
+        document.getElementById("ipPublica").innerHTML = "IP Pública: " + datos.ip;
+      } catch (e) {
+        document.getElementById("ipPublica").innerHTML = "Error obteniendo IP pública";
+      }
+    }
 
-// GPS Real
-if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(
-        pos => {
-            const lat = pos.coords.latitude;
-            const lon = pos.coords.longitude;
+    function obtenerGPS() {
+      if (!navigator.geolocation) {
+        document.getElementById("gps").innerHTML = "GPS no soportado";
+        return;
+      }
 
-            log("Latitud GPS: " + lat);
-            log("Longitud GPS: " + lon);
-            log("Google Maps: https://www.google.com/maps?q=" + lat + "," + lon);
+      navigator.geolocation.getCurrentPosition(
+        (pos) => {
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+
+          document.getElementById("gps").innerHTML =
+            "Latitud: " + lat + "<br>Longitud: " + lon;
+
+          document.getElementById("mapa").innerHTML =
+            `<a href="https://www.google.com/maps?q=${lat},${lon}" target="_blank">
+              Ver ubicación en Google Maps
+            </a>`;
         },
-        err => log("Error GPS: " + err.message),
-        {
-            enableHighAccuracy: true,
-            timeout: 10000
+        (err) => {
+          document.getElementById("gps").innerHTML =
+            "Error GPS: " + err.message;
         }
-    );
-} else {
-    log("El dispositivo no soporta GPS.");
-}
-</script>
+      );
+    }
 
+    obtenerIPPublica();
+    obtenerGPS();
+  </script>
 </body>
 </html>
