--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 <body>
 
 <div class="card">
-    <h2>Información del dispositivo</h2>
+    <h2>Información del dispositivo p1</h2>
 
     <p id="ip">IP Pública: Cargando...</p>
     <p id="gps">GPS: Esperando permiso...</p>
